--- a/fins-app/package.json
+++ b/fins-app/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.542.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.8.2",
     "recharts": "^3.1.2",
     "uuid": "^11.1.0"
